[gd_scene load_steps=16 format=3 uid="uid://ryf8eh1f7mvt"]

[ext_resource type="Script" uid="uid://beh22loi7o0px" path="res://Scripts/Units/Unit.gd" id="1_6efm0"]
[ext_resource type="Resource" uid="uid://m0dyb5fny5nl" path="res://ResourceStats/hero_mage.tres" id="2_kye2u"]
[ext_resource type="Script" uid="uid://d3nmhythni8qv" path="res://Scripts/Units/Components/UnitMovement.gd" id="3_ruynu"]
[ext_resource type="Script" uid="uid://bdvhyxnqswdv1" path="res://Scripts/Units/Components/UnitCombat.gd" id="4_ii888"]
[ext_resource type="Script" uid="uid://dqg78oxd8p48j" path="res://Scripts/Units/Components/UnitSelection.gd" id="5_kxan3"]
[ext_resource type="PackedScene" uid="uid://dnffbm53dpea8" path="res://Scenes/Units/Mage/MageProjectile.tscn" id="5_y0k2v"]
[ext_resource type="Script" uid="uid://dpak7jdwiossy" path="res://Scripts/Units/Components/UnitUI.gd" id="6_c15qa"]
[ext_resource type="Script" uid="uid://bu07wvmo8p3lm" path="res://Scripts/Units/Components/UnitAbilities.gd" id="7_y0k2v"]
[ext_resource type="Script" uid="uid://b0wf8k7k2i016" path="res://Scripts/Units/Components/HitboxComponent.gd" id="8_hitbox"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_separation"]

[sub_resource type="TorusMesh" id="TorusMesh_qk68r"]
inner_radius = 0.726
outer_radius = 0.674

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_lymsv"]
shading_mode = 0

[sub_resource type="CapsuleMesh" id="CapsuleMesh_qk68r"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_feet"]
radius = 0.4

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_body"]
height = 2.2

[node name="Unit" type="CharacterBody3D"]
collision_layer = 2
script = ExtResource("1_6efm0")
stats_resource = ExtResource("2_kye2u")
team_id = null

[node name="SeparationArea" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="SeparationArea"]
shape = SubResource("CylinderShape3D_separation")

[node name="SelectionRing" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.8779901, 0)
mesh = SubResource("TorusMesh_qk68r")
surface_material_override/0 = SubResource("StandardMaterial3D_lymsv")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_qk68r")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CylinderShape3D_feet")

[node name="HitboxComponent" type="Area3D" parent="."]
script = ExtResource("8_hitbox")

[node name="CollisionShape3D" type="CollisionShape3D" parent="HitboxComponent"]
shape = SubResource("CapsuleShape3D_body")

[node name="StatsLabel" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.520485, 0)
billboard = 1

[node name="UnitMovement" type="Node" parent="."]
script = ExtResource("3_ruynu")
steer_force = null
look_ahead = null
stop_distance = null
turn_rate = null
face_requirement = null

[node name="UnitCombat" type="Node" parent="."]
script = ExtResource("4_ii888")
is_ranged = true
projectile_scene = ExtResource("5_y0k2v")

[node name="UnitSelection" type="Node" parent="."]
script = ExtResource("5_kxan3")

[node name="UnitUI" type="Node" parent="."]
script = ExtResource("6_c15qa")

[node name="UnitAbilities" type="Node" parent="."]
script = ExtResource("7_y0k2v")
